[~] {@20329} Call request form visibility fixed

--- a/css/styles.less
+++ b/css/styles.less
@@ -10,6 +10,14 @@
 /*====================================
 =            Basic Styles            =
 ====================================*/
+.no-hidden {
+    visibility: visible !important;
+}
+
+.no-full-width {
+    width: auto !important;
+}
+
 .tab-content>.tab-pane {
     display: block;
 }
